--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
