--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "livekit-server-sdk": "^2.0.4",
     "lucide-react": "^0.338.0",
