--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -31,7 +33,7 @@
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "query-string": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
@@ -39,6 +41,7 @@
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
     "usehooks-ts": "^2.15.1",
     "uuid": "^9.0.1",
     "zustand": "^4.5.1"
