--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitch-clone",
+  "name": "gamehub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "@clerk/themes": "^1.7.9",
     "@livekit/components-react": "^2.0.3",
     "@livekit/components-styles": "^1.0.10",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -56,7 +56,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.10.2",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
